--- a/entrega 2/styles/index.css
+++ b/entrega 2/styles/index.css
@@ -3,9 +3,9 @@
 
 /* variables */
 :root{
+    --colorDecoracion: #F79327;
     --colorFondo: beige;
     --colorClaro: lightsalmon;
-    --colorEnfasis: rgb(52, 133, 125);
     --tipografía:'Arial Narrow', Arial, sans-serif;
 }
 
@@ -82,9 +82,6 @@
     animation-direction: alternate-reverse;
 }
 
-/* Vamos a poner a funcionar la animación */
-/* 0% -> 50% -> 100%
-    from -> to */
 
     @keyframes deslizar {
         from{
@@ -97,35 +94,10 @@
         }
         to{
             transform: translateX(-200%);
-            /* transform: scale(1.2); */
         }
     }
     
-    /* @keyframes rotar {
-        from{
-            transform: rotate(0deg);
-        }
-        to{
-            transform: rotate(-360deg);
-        }
-    } */
-    
-    /* @keyframes escala {
-        
-        from{
-            transform: scale(0.4);
-        }
-        50%{
-            transform: scale(1);
-        }
-        to{
-            transform: scale(1.7);
-        }
-    } */
-    
     .contenedor-slider img{
-        /*  */
-        /* flex: 1 0 100%; */
         height: 80%;
         width: 80%;
         
@@ -174,8 +146,6 @@ main{
     align-items:center;
     padding-left: 20px;
     padding-right: 20px;
-
-    /* poner esto por encima de todo */
     z-index: 1000;
 }
 
@@ -204,7 +174,6 @@ main{
 
 #div-imagen img{
     width: 110%;
-    ;
 }
 
 #div-imagen h1{
@@ -231,7 +200,8 @@ main{
  display: grid;
  grid-template-rows: auto auto auto;
 row-gap: 50px;
-
+height: 90vh;
+width: 80%;
  
  
 }
@@ -245,26 +215,29 @@ row-gap: 50px;
 
 .habilidades{
     margin-right: 20% ;
-    background-color:  #F79327;
+    background-color:  var(--colorClaro);
     border-radius: 10%;
-    border: 20px solid #F79327 ;
+    border: 20px var(--colorClaro);
     justify-content: right;
+    padding: 3%;
 
     
 }
 
 .hobbies{
-    background-color:  #F79327;
+    background-color: var(--colorClaro);
     border-radius: 10%;
-    border: 20px solid #F79327 ;
+    border: 20px var(--colorClaro);
+    padding: 3%;
     
 }
 
 .hobbies2{
     margin-left: 20% ;
-    background-color:  #F79327;
+    background-color: var(--colorClaro);
     border-radius: 10%;
-    border: 20px solid #F79327 ;
+    border: 20px var(--colorClaro);
+    padding: 3%;
 }
 
 
@@ -291,5 +264,13 @@ footer{
 
 .redesSociales{
     text-align: justify;
+}
+
+@media screen and (max-width:1024px){
+    .contenedor{
+    display: flex;
+    align-items: center;
+       
+    }
 }
 
